
load("//:defs.bzl", "COPTS", "LINKOPTS", "DEFAULT_VISIBILITY")

package(default_visibility = DEFAULT_VISIBILITY)

# Export all local files for cross-package references
exports_files(glob(["*.cc", "*.h"], allow_empty = True))
exports_files(["lua_wrap.sh"])  # Added this line
# Header library for cross-package includes (sandbox compatible)
cc_library(
    name = "src_headers",
    hdrs = glob(["*.h","*.cc"], allow_empty = True),
    deps = ["//:config_h"],
    visibility = ["//visibility:public"],
)

# Binary: snort
cc_binary(
    name = "snort",
    srcs = [
    "main.h",
    "main.cc",
],
    deps = [
    "//:config_h",
    ":src_headers",
    "//src/codecs:codecs",
    "//src/codecs/ip:ip_codecs",
    "//src/codecs/link:link_codecs",
    "//src/codecs/misc:misc_codecs",
    "//src/codecs/root:root_codecs",
    "//src/connectors:connectors",
    "//src/connectors/file_connector:file_connector",
    "//src/connectors/std_connector:std_connector",
    "//src/connectors/tcp_connector:tcp_connector",
    "//src/connectors/unixdomain_connector:unixdomain_connector",
    "//src/control:control",
    "//src/decompress:decompress",
    "//src/detection:detection",
    "//src/dump_config:dump_config",
    "//src/events:events",
    "//src/file_api:file_api",
    "//src/filters:filter",
    "//src/flow:flow",
    "//src/framework:framework",
    "//src/hash:hash",
    "//src/helpers:helpers",
    "//src/host_tracker:host_tracker",
    "//src/actions:ips_actions",
    "//src/ips_options:ips_options",
    "//src/js_norm:js_norm",
    "//src/latency:latency",
    "//src/log:log",
    "//src/loggers:loggers",
    "//src/lua:lua",
    "//src/main:main",
    "//src/managers:managers",
    "//src/memory:memory",
    "//src/mime:mime",
    "//src/network_inspectors:network_inspectors",
    "//src/network_inspectors/appid:appid",
    "//src/network_inspectors/arp_spoof:arp_spoof",
    "//src/network_inspectors/binder:binder",
    "//src/network_inspectors/extractor:extractor",
    "//src/network_inspectors/normalize:normalize",
    "//src/network_inspectors/packet_capture:packet_capture",
    "//src/network_inspectors/perf_monitor:perf_monitor",
    "//src/network_inspectors/port_scan:port_scan",
    "//src/network_inspectors/reputation:reputation",
    "//src/network_inspectors/rna:rna",
    "//src/network_inspectors/snort_ml:snort_ml",
    "//src/policy_selectors:policy_selectors",
    "//src/policy_selectors/address_space_selector:address_space_selector",
    "//src/policy_selectors/tenant_selector:tenant_selector",
    "//src/packet_io:packet_io",
    "//src/parser:parser",
    "//src/payload_injector:payload_injector",
    "//src/ports:ports",
    "//src/profiler:profiler",
    "//src/protocols:protocols",
    "//src/pub_sub:pub_sub",
    "//src/search_engines:search_engines",
    "//src/service_inspectors:service_inspectors",
    "//src/service_inspectors/back_orifice:back_orifice",
    "//src/service_inspectors/cip:cip",
    "//src/service_inspectors/dce_rpc:dce_rpc",
    "//src/service_inspectors/dnp3:dnp3",
    "//src/service_inspectors/dns:dns",
    "//src/service_inspectors/ftp_telnet:ftp_telnet",
    "//src/service_inspectors/gtp:gtp_inspect",
    "//src/service_inspectors/http2_inspect:http2_inspect",
    "//src/service_inspectors/http_inspect:http_inspect",
    "//src/service_inspectors/iec104:iec104",
    "//src/service_inspectors/imap:imap",
    "//src/service_inspectors/mms:mms",
    "//src/service_inspectors/modbus:modbus",
    "//src/service_inspectors/netflow:netflow",
    "//src/service_inspectors/opcua:opcua",
    "//src/service_inspectors/pop:pop",
    "//src/service_inspectors/rpc_decode:rpc_decode",
    "//src/service_inspectors/s7commplus:s7commplus",
    "//src/service_inspectors/sip:sip",
    "//src/service_inspectors/smtp:smtp",
    "//src/service_inspectors/ssh:ssh",
    "//src/service_inspectors/ssl:ssl",
    "//src/service_inspectors/tlv_pdu:tlv_pdu",
    "//src/service_inspectors/wizard:wizard",
    "//src/sfip:sfip",
    "//src/sfrt:sfrt",
    "//src/side_channel:side_channel",
    "//src/stream:stream",
    "//src/stream/base:stream_base",
    "//src/stream/file:stream_file",
    "//src/stream/icmp:stream_icmp",
    "//src/stream/ip:stream_ip",
    "//src/stream/tcp:stream_tcp",
    "//src/stream/udp:stream_udp",
    "//src/stream/user:stream_user",
    "//src/stream:stream_paf",
    "//src/target_based:target_based",
    "//src/mp_transport/mp_unix_transport:mp_unix_transport",
    "//src/time:time",
    "//src/trace:trace",
    "//src/mp_transport:mp_transports",
    "//src/utils:utils",
],
    copts = COPTS,
    linkopts = LINKOPTS,
    visibility = ["//visibility:public"],
)
